--- a/src/main/webapp/manage_permissions.html
+++ b/src/main/webapp/manage_permissions.html
@@ -175,7 +175,7 @@
 									<input type="button" value="查询" class="ui-form__btn btn btn-dark" style="min-width:80px;font-size:14px;line-height:40px"/>								
                             	</div>
                             	<div style="float:left;margin-left:75px">
-                            		<input type="button" value="添加管理员" class="ui-form__btn btn btn-dark" onclick="window.location='manager_add.html'" style="min-width:80px;font-size:14px;line-height:40px"/>
+                            		<input type="button" value="添加管理员" class="ui-form__btn btn btn-dark" onclick="checkitout()" style="min-width:80px;font-size:14px;line-height:40px"/>
                             	</div>
                             </div>
                     	</form>
@@ -337,5 +337,21 @@
 </body>
 
 </html>
-
+<script language="javascript">
+    function checkitout() {
+        $.ajax({
+            url: '/manage/checkPower',
+            type: 'POST',
+            dataType: 'json',
+            data: {mPassword: mPassword},
+            success: function (result) {
+                alert("添加管理员成功,新管理员的登陆ID为："+result.data);
+                location.reload();
+            },
+            error: function (result) {
+                alert(result.message());
+            }
+        })
+    }
+</script>
 
