--- a/src/main/webapp/sellerService.html
+++ b/src/main/webapp/sellerService.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>客服</title>
-    <link href="static/wt/css/webSocket.css" rel="stylesheet">
-    <link rel="stylesheet" href="static/wt/css/master.css">
-    <link rel="stylesheet" href="static/layui/css/layui.css" media="all">
+    <link href="/static/wt/css/webSocket.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/wt/css/master.css">
+    <link rel="stylesheet" href="/static/layui/css/layui.css" media="all">
     <style>
         .left_font {
             text-align: left;
@@ -44,73 +44,73 @@
         }
     </style>
 </head>
-<body style="overflow: hidden; margin: auto 0">
+<body style="background-color: #CFCFCF">
 <!--总的框架-->
-<div id="main" style="width: 100%; height: 100%;">
-    <div id="left_panel" style="border: thin #eeeeee;border-right-style: solid;">
-        <div style="padding-top: 20px; padding-bottom: 30px; border: thin #eeeeee; border-bottom-style: solid; ">
-            <h3 id="myInfo"></h3>
-        </div>
-        <div>
-            <ul id="talk_list" class="social-links">
-                <!--<li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">-->
+    <div id="main" style="width: 1000px; height: 75%; margin: 3% auto;">
+        <div id="left_panel">
+            <div style="padding-top: 20px; padding-bottom: 30px; border: thin #eeeeee; border-bottom-style: solid; ">
+                <h3 id="myInfo"></h3>
+            </div>
+            <div>
+                <ul id="talk_list" class="social-links">
+                    <!--<li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">-->
                     <!--<h3><img src="static/images/logo-dark.png" style="width: 30px; height: 30px;margin-right: 10px">123</h3>-->
-                <!--</li>-->
-                <!--<li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">-->
+                    <!--</li>-->
+                    <!--<li onclick="li_click(this)" style="padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;">-->
                     <!--<h3><img src="static/images/head.jpg" style="width: 30px; height: 30px;">456</h3>-->
-                <!--</li>-->
-            </ul>
+                    <!--</li>-->
+                </ul>
+            </div>
+        </div>
+
+        <!--菜单栏，用于显示信息-->
+        <div id="main_panel">
+            <div id="menu" style="height: 10%; padding-top: 15px">
+                <h3 id="sell_name"></h3>
+            </div>
+            <hr>
+            <!--显示对话的面板-->
+            <div id="show" style="width: 100%; height: 55%; overflow: auto">
+                <div style="padding-bottom: 30px">
+                    <a href="#" onclick="showHistory()">历史记录</a>
+                </div>
+                <div id="content_list" style="padding: 0 50px">
+                    <div class="left_div">
+                        <div style="float: left">
+                            <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
+                        </div>
+                        <div class="left_font">
+                            <h4>啊啊啊啊</h4>
+                        </div>
+                    </div>
+                    <div class="right_div">
+                        <div style="float: right">
+                            <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px">
+                        </div>
+                        <div class="right_font">
+                            <h4>啊啊啊啊</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <!--文本输入框-->
+            <div id="content" style="width: 100%; text-align: center;padding-top: 20px;">
+                <label for="text" style="width: 100%; margin: 0 auto">
+                    <textarea id="text" class="area" placeholder="说点啥" name="textarea_name"></textarea>
+                </label>
+                <input type="hidden" id="toId" value="">
+            </div>
+            <!--按钮-->
+            <div>
+                <div style="float: right; padding-right: 40px; padding-top: 30px">
+                    <!--<input type="button" value="test" id="server">-->
+                    <button class="layui-btn" onclick="send()">发送</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!--菜单栏，用于显示信息-->
-    <div id="main_panel" style="float: right; width: 80%;">
-        <div id="menu" style="height: 60px">
-            <h3 id="sell_name"></h3>
-        </div>
-        <hr>
-        <!--显示对话的面板-->
-        <div id="show" style="width: 100%; height: 350px;overflow: auto">
-            <div style="padding-bottom: 30px">
-                <a href="#" onclick="showHistory()">历史记录</a>
-            </div>
-            <div id="content_list" style="padding: 0 50px">
-                <div class="left_div">
-                    <div style="float: left">
-                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-right: 20px">
-                    </div>
-                    <div class="left_font">
-                        <h4>啊啊啊啊</h4>
-                    </div>
-                </div>
-                <div class="right_div">
-                    <div style="float: right">
-                        <img src="static/images/logo-dark.png" style="width: 30px; height: 30px; margin-left: 20px">
-                    </div>
-                    <div class="right_font">
-                        <h4>啊啊啊啊</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <hr>
-        <!--文本输入框-->
-        <div id="content" style="width: 100%;text-align: center;padding-top: 20px;">
-            <label for="text" style="width: 100%; margin: 0 auto">
-                <textarea id="text" class="area" placeholder="说点啥" name="textarea_name"></textarea>
-            </label>
-            <input type="hidden" id="toId" value="">
-        </div>
-        <!--按钮-->
-        <hr>
-        <div>
-            <div style="float: right; padding-right: 40px">
-                <!--<input type="button" value="test" id="server">-->
-                <button class="layui-btn" onclick="send()">发送</button>
-            </div>
-        </div>
-    </div>
-</div>
 </body>
 <script src="static/jq/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="static/jq/webSocket/sock_js.js" type="text/javascript"></script>
@@ -141,50 +141,65 @@
 
     function onMessage(response) {
         console.log(response.data);
-//        var msg = $.parseJSON(response.data);
-        addChatListFromServer(response.data);
+        var msg = $.parseJSON(response.data);
+        var id = msg.fromId;
+        if (id in map) {
+            var value = map[id];
+            value.push(msg);
+            if (id === $('#toId').val())
+                append(msg, true);
+        } else {
+            $.get('/socket/getUserId', {iId:msg.fromId}, function (result) {
+                console.log(result.data);
+                var arr = [];
+                arr.push(msg);
+                map[id] = arr;
+                //拼接会话列表中的li
+                var ul = $('#talk_list');
+                var img = $("<img>");
+                img.attr("style", "width: 30px; height: 30px;");
+                img.attr("src", "/static/images/" + result.data.uIcon);
+                var _content = $("<h3>");
+                _content.append(img);
+                _content.append(msg.fromId);
+                var li = $('<li>');
+                li.attr("style", "padding: 20px 5px; border: thin #eeeeee; border-bottom-style: solid;");
+                li.attr("onclick", "li_click(this)");
+                li.append(_content);
+                ul.append(li);
+                //添加头像到缓存中
+                photoMap[msg.fromId] = "/static/images/" + result.data.uIcon;
+            });
+        }
         //添加图标提示
         //添加提示音
-        new Audio("static/music/system.mp3").play(); //声音文件地址，支持mp3 或者 ogg
+        new Audio("/static/music/system.mp3").play(); //声音文件地址，支持mp3 或者 ogg
     }
 
     function onError() {
     }
 </script>
 <script>
-    $('#server').on('click', function () {
-        console.log('test');
-        layer.open({
-            type: 2,
-            title: '在线客服',
-            maxmin: true,
-            shadeClose: false,
-            area: ['60%', '75%'],
-            content: 'sellerService.html'
-        });
-    });
-
     /*
      * 初始时获取目标对象的信息
      */
-    $(function () {
-        var id=getQueryString("iId");
-        console.log('iId = ' + id);
-        $.get('/socket/getSellerId', {iId:id}, function (result) {
-            initChatList(result.data);
-        });
-    });
+//    $(function () {
+//        $.get('/socket/chat_list', {}, function (result) {
+//            initChatList(result.data);
+//        });
+//    });
     /*
      * 获取个人信息
      */
-    $.get('/user', {}, function (result) {
+    $.get('/seller/find', {}, function (result) {
+            console.log(result.data);
             var img = $('<img>');
-            myPhoto = "static/images/" + result.data.uIcon;
+            myPhoto = "/static/images/" + result.data.sIcon;
             img.attr("src", myPhoto);
             img.attr("style", "width: 60px; height: 60px; margin-right:15px");
             var myInfo = $('#myInfo');
             myInfo.append(img);
-            myInfo.append(result.data.uUserName);
+            myInfo.append(result.data.sId);
         }
     );
 </script>
