管理员界面调整

--- a/src/main/webapp/manage_store.html
+++ b/src/main/webapp/manage_store.html
@@ -128,7 +128,7 @@
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
                             <li><a href="manager_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">返 回</a>
+                            <li><a onclick="exit()">返 回</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -348,6 +348,7 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/manager.js"></script>
 </body>
 </html>
 
