--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -314,31 +314,54 @@
                      data-auto-play="4000" data-center="true" data-stop-on-hover="true">
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
-                            <div class="b-goods__categorie">huawei</div>
-                            <div class="b-goods__title">huawei</div>
-                            <span class="b-goods__number">4</span>
+                            <div class="b-goods__categorie">shoes</div>
+                            <div class="b-goods__title">时尚潮鞋
+                            <p style="color: #2a2d32">Nike&nbsp;Adidas&nbsp;<br>PUMA&nbsp;Reebok</p>
+                            </div>
+                                <p>SKECHERS&nbsp;&nbsp; New balance</p>
+                            <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <img class="img-responsive" src="static/images/huawei.jpg" alt="img">
+                            <img class="img-responsive" src="static/images/timg2.png" alt="img">
                         </div>
                     </div>
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
-                            <div class="b-goods__categorie">huawei</div>
-                            <div class="b-goods__title">huawei</div>
-                            <span class="b-goods__number">4</span>
+                            <div class="b-goods__categorie">phone</div>
+                            <div class="b-goods__title">科技手机
+                                <p style="color: #2a2d32">HUAWEI&nbsp;&nbsp;&nbsp;Mi<br>Oppo&nbsp;&nbsp;iPhone</p>
+                            </div>
+                            <p>vivo&nbsp;&nbsp;&nbsp;one plus</p>
+                            <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <img class="img-responsive" src="static/images/big_photo.jpg" alt="img">
+                            <img class="img-responsive" src="static/images/timg.jpg" alt="img">
                         </div>
                     </div>
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
-                            <div class="b-goods__categorie">Best offers</div>
-                            <div class="b-goods__title">滑板鞋<br>Sneakers</div>
+                            <div class="b-goods__categorie">dress</div>
+                            <div class="b-goods__title">轻奢女装
+                                <p style="color: #2a2d32">FENDI&nbsp;Dior<br>D&G&nbsp;&nbsp;LV</p>
+                            </div>
+                            <p>HERMES&nbsp;&nbsp;gucci</p>
+                            <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <img class="img-responsive" src="static/wt/images/2_2.jpg" alt="img">
+                            <img class="img-responsive" src="static/images/timg3.jpg" alt="img">
+                        </div>
+                    </div>
+                    <div class="b-goods b-goods-3">
+                        <div class="b-goods__inner">
+                            <div class="b-goods__categorie">dress</div>
+                            <div class="b-goods__title">绅士男装
+                                <p style="color: #2a2d32">AMANI&nbsp;BVGARI<br>Calvin Klein</p>
+                            </div>
+                            <p>PRADA&nbsp;&nbsp;BURBERRY</p>
+                            <span class="b-goods__number">更多品牌尽在微淘</span>
+                        </div>
+                        <div class="b-goods__img">
+                            <img class="img-responsive" src="static/images/timg4.jpg" alt="img">
                         </div>
                     </div>
                 </div>
