管理员界面调整

--- a/src/main/webapp/manage_buyer.html
+++ b/src/main/webapp/manage_buyer.html
@@ -128,7 +128,7 @@
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
                             <li><a href="manager_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -223,7 +223,8 @@
                                		</table>
                                 </div>
                                 <div id="fenye"></div>
-                             	</div>                             	
+                             	</div>
+                                </form>
                             </div>                            
                         </form>
                     </div>
@@ -351,6 +352,7 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/manager_buyer.js"></script>
+<script src="static/js/manager.js"></script>
 </body>
 <script>
     $(function () {
