--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -259,10 +259,8 @@
                                                         </tr>
                                                         <tr>
                                                             <td colspan="3">
-                                                                <select class="selectpicker" data-width="100%" id="sSex">
-                                                                    <option value="男">男</option>
-                                                                    <option value="女">女</option>
-                                                                </select>
+                                                                <input type="radio" name="rd" value="男" style="margin-left: 200px" checked="checked">男
+                                                                <input type="radio" name="rd" value="女" style="margin-left: 200px">女
                                                             </td>
                                                             <td>
                                                                 <p style='color:green;font-size: 70%'><strong>√</strong></p>
